--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 body {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
 }
 
 header {
@@ -77,7 +77,7 @@ main {
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  row-gap: 1.5rem;
   font-family: 'outfit', 'sora', sans-serif;
 }
 
@@ -96,8 +96,6 @@ main>h1 {
   grid-template: repeat(2, max(480px, 35vh)) / repeat(3, 1fr);
   gap: 3rem;
   width: 100%;
-  height: 85%;
-  justify-content: space-between;
   justify-items: center;
   align-content: center;
   z-index: 2;
@@ -172,16 +170,14 @@ footer {
   padding: 0 2rem;
   position: relative;
   font-family: 'outfit', 'sora', sans-serif;
-  background: linear-gradient(
-    -45deg,
-    var(--uri-gray),
-    var(--uri-white),
-    var(--uri-white)
-  );
+  background: linear-gradient(-45deg,
+      var(--uri-gray),
+      var(--uri-white),
+      var(--uri-white));
 }
 
 .footer-img {
-  width: 20%;
+  width: 35%;
   border: 8px solid var(--uri-dk-trans);
   border-radius: 50%;
   box-shadow: 8px 8px 12px var(--uri-black);
@@ -249,17 +245,13 @@ address {
     max-width: 1000px;
   }
   
-  .footer-img {
-    max-width: 500px;
-  }
-
   .my-projects>div {
     max-width: 1000px;
   }
   
   .my-projects>div:hover {
-  transform: scale(1.1);
-}
+    transform: scale(1.1);
+  }
 }
 
 @media screen and (min-width: 641px) and (max-width: 1023px) {
@@ -281,16 +273,11 @@ address {
   }
   
   .my-projects>div:hover {
-  transform: scale(1.1);
-}
+    transform: scale(1.1);
+  }
 }
 
 @media screen and (orientation: landscape) and (max-height: 600px) {
-  body {
-    display: flex;
-    flex-direction: column;
-  }
-  
   header::before {
     content: " ";
     width: 100px;
@@ -321,14 +308,19 @@ address {
   }
   
   .my-projects>div:hover {
-  transform: scale(1.1);
-}
-
-footer {
+    transform: scale(1.1);
+  }
+  
+  footer {
     padding: 3rem 2rem;
-}
-
-.collab, .footer-img {
-  margin-bottom: 2rem;
-}
+  }
+  
+  .footer-img {
+    width: 25%;
+  }
+  
+  .collab,
+  .footer-img {
+    margin-bottom: 2rem;
+  }
 }
